# rust_web_project

./: Cargo.toml
file_upload_endpoint/: Cargo.toml
file_upload_endpoint/files/: message(1).txt
file_upload_endpoint/public/: index.html
file_upload_endpoint/src/: main.rs
rust-cli-file-uploader/: Cargo.toml
rust-cli-file-uploader/src/: main.rs
rust-hello-server/: Cargo.toml
rust-hello-server/src/: main.rs
