[package]
name = "rust-cli-file-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.14", features = ["blocking", "multipart"] }

structopt = "0.2.15"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
# reqwest = { version = "0.11.24", features = ["multipart", "blocking"] }
tokio = { version = "1.36.0", features = ["full"] }
indicatif = "0.17.7"
mime_guess = "2.0.4"
openssl = "0.10"
